--- a/web/src/main/webapp/config.xhtml
+++ b/web/src/main/webapp/config.xhtml
@@ -12,7 +12,8 @@
 <h:body>
     <ui:composition template="templates/templateLayout.xhtml">
         <ui:define name="login">
-            <p:outputLabel value="#{configBean.configTitle}"/>
+            <!--<p:outputLabel value="#{configBean.configTitle}"/>-->
+            <h:graphicImage library="images" name="Under-Construction.png" />
         </ui:define>
         <ui:define name="treeInfo">
 
