--- a/web/src/main/webapp/config.xhtml
+++ b/web/src/main/webapp/config.xhtml
@@ -12,8 +12,7 @@
 <h:body>
     <ui:composition template="templates/templateLayout.xhtml">
         <ui:define name="login">
-            <!--<p:outputLabel value="#{configBean.configTitle}"/>-->
-            <h:graphicImage library="images" name="Under-Construction.png" />
+            <p:graphicImage value="/resources/images/construction.jpg"/>
         </ui:define>
         <ui:define name="treeInfo">
 
