removed sorting and after sonar changes + fixed bug with drag & drop (2 equals folders in one folder)

--- a/site/src/main/webapp/resources/composite/edit.xhtml
+++ b/site/src/main/webapp/resources/composite/edit.xhtml
@@ -32,7 +32,7 @@
                          ajax="false"
                          update="#{cc.attrs.submitButtonActionUpdate}"
                 />
-        <p:commandButton value="Cancel" type="button" onclick="editDialog.hide()"/>
+        <p:commandButton value="Cancel" type="button" onclick="PF('editDialog').hide();"/>
     </h:form>
 </composite:implementation>
 </html>
