--- a/site/src/main/webapp/resources/composite/customTree.xhtml
+++ b/site/src/main/webapp/resources/composite/customTree.xhtml
@@ -49,6 +49,8 @@
     <p:contextMenu for="treecomponent" rendered="#{cc.attrs.context}">
         <p:menuitem value="New Folder" onclick="#{cc.attrs.create}.show();" icon="ui-icon-document"/>
         <p:menuitem value="New Document" onclick="#{cc.attrs.createfile}.show();" icon="ui-icon-document"/>
+        <p:menuitem value="Copy" actionListener="#{action.markFolder(treeBean.selectedFSObject)}" icon="ui-icon-document"/>
+        <p:menuitem value="Paste" actionListener="#{action.copyFolder(treeBean.selectedFSObject)}" icon="ui-icon-document"/>
         <p:menuitem value="Edit" onclick="#{cc.attrs.edit}.show();" icon="ui-icon-document"/>
         <p:menuitem value="Delete" onclick="#{cc.attrs.delete}.show();" icon="ui-icon-document"/>
     </p:contextMenu>
