--- a/site/src/main/webapp/resources/composite/cmisBrowserComponent.xhtml
+++ b/site/src/main/webapp/resources/composite/cmisBrowserComponent.xhtml
@@ -29,8 +29,8 @@
 <cc:implementation>
 
     <h:form id="treeForm">
-        <p:remoteCommand name="invokeBack" action="#{treeBean.doBack}" update=":#{cc.clientId}:treeForm"/>
-        <p:remoteCommand name="invokeForward" action="#{treeBean.doForward}" update=":#{cc.clientId}:treeForm" />
+        <p:remoteCommand name="invokeBack" action="#{treeBean.doBack}" update=":cmisbrowser:treeForm"/>
+        <p:remoteCommand name="invokeForward" action="#{treeBean.doForward}" update=":cmisbrowser:treeForm" />
         <p:panelGrid id="panel" columns="2" style="width: 100%; height: 400px;" styleClass="table">
             <h:outputStylesheet library="style" name="style.css"/>
 
