--- a/site/src/main/webapp/resources/composite/actionDialogs.xhtml
+++ b/site/src/main/webapp/resources/composite/actionDialogs.xhtml
@@ -29,6 +29,8 @@
         <h:form id="createForm">
 
             <p:inputText id="name" value="#{action.name}"/>
+            <p:watermark for="name" value="name"/>
+
             <p><p:selectOneMenu id="type" value="#{treeBean.folderType}">
                 <f:selectItems value="#{treeBean.folderTypes}"/>
             </p:selectOneMenu></p>
@@ -78,15 +80,15 @@
             <p:inputText id="inputTextForDoc" value="#{action.name}" validatorMessage="Wrong name" label="name">
                 <f:validateRegex pattern="^[_A-Za-z0-9-\+]{0,14}$"/>
             </p:inputText>
+            <p:watermark for="inputTextForDoc" value="name"/>
             <p:commandButton value="Ok" actionListener="#{action.createFile(treeBean.parent)}"
                              ajax="false"
-                             />
+                    />
 
             <p:commandButton value="Cancel" type="button" onclick="#{cc.attrs.createfile}.hide();" ajax="false"/>
         </h:form>
 
     </p:dialog>
-
 
 
     <p:dialog id="#{cc.parent.id}edit" widgetVar="#{cc.attrs.edit}"
