--- a/site/src/main/webapp/resources/composite/customTree.xhtml
+++ b/site/src/main/webapp/resources/composite/customTree.xhtml
@@ -26,11 +26,12 @@
             cache="false"
             dynamic="true"
             selectionMode="single"
+            draggable="true" droppable="true" dragdropScope="demo"
             selection="#{treeBean.selectedNode}"
             onNodeClick="doNav();"
             style="width: 300px;">
 
-
+        <p:ajax event="dragdrop" listener="#{treeBean.onDragDrop}" update=":cmisbrowser:treeForm"/>
         <p:ajax event="select" update="#{cc.attrs.updateId} :#{cc.parent.clientId}:actiondialogs:#{cc.parent.clientId}edit"/>
 
         <p:ajax event="expand" listener="#{treeBean.onNodeExpand}" />
