--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -52,7 +52,7 @@
             >
 
         <p:ajax event="rowSelect" listener="#{treeBean.onRowSelect}"
-                update="@form :#{cc.parent.clientId}:actiondialogs:#{cc.parent.clientId}edit"/>
+                update="@form :#{cc.parent.clientId}:actiondialogs:#{cc.parent.clientId}edit :historyDialogid"/>
         <f:facet name="header">
             <h:inputText value="#{treeBean.parent.path}"
                          style="border-radius: 11px;font-size: 16px; margin-bottom: 5px; color: #000000;" size="90"
@@ -63,7 +63,7 @@
             <p:commandButton value="Search" process="tablecomponent"
                              update=":#{cc.parent.clientId}:treeForm:table:tablecomponent"/>
                              <p:watermark for="finditem"  value="name"/>
-            <p:tabMenu id="actiontabmenu" activeIndex="5" rendered="#{cc.attrs.actionPanel}">
+            <p:tabMenu id="actiontabmenu" activeIndex="6" rendered="#{cc.attrs.actionPanel}">
                 <p:menuitem>
                     <p:menuButton value="New">
                         <p:menuitem icon="ui-icon-folder-collapsed" value="Folder"
@@ -84,6 +84,9 @@
 
                 <p:menuitem id="editmenuitem" value="Edit" disabled="#{!treeBean.checkThatSelected}"
                             onclick="#{cc.attrs.edit}.show();" icon="ui-icon-arrowrefresh-1-w"/>
+                <p:menuitem id="historymenuitem" value="History" disabled="#{!fileActions.versionable}"
+                            action="#{action.fillHistory(treeBean.selectedFSObject)}"
+                            oncomplete="historyDialog.show();" icon="ui-icon-arrowrefresh-1-w"/>
 
                 <p:menuitem id="deletemenuitem" value="Delete" disabled="#{!treeBean.checkThatSelected}"
                             onclick="#{cc.attrs.delete}.show();"
