--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -59,10 +59,70 @@
                          disabled="true"/>
 
 
-            <p:inputText id="finditem" value="#{treeBean.findQuery}" />
+            <p:inputText id="finditem" value="#{treeBean.findQuery}" disabled="#{treeBean.disableSearchSimple}"/>
             <p:commandButton value="Search" process="tablecomponent"
-                             update=":#{cc.parent.clientId}:treeForm:table:tablecomponent"/>
+                             update=":#{cc.parent.clientId}:treeForm:table:tablecomponent" disabled="#{treeBean.disableSearchSimple}"/>
                              <p:watermark for="finditem"  value="name"/>
+
+            <p:accordionPanel activeIndex="-1" actionListener="#{treeBean.openSearchAdvanced}">
+                <p:ajax event="tabChange" listener="#{treeBean.ableSearchAdvanced}"  />
+                <p:tab title="Advanced search">
+
+
+                    <h:outputText value="Type: "/>
+                    <p:selectOneRadio id="options" value="#{treeBean.cmisType}" actionListener="#{treeBean.choosenCmisType}">
+                        <f:selectItem itemLabel="Folder" itemValue="cmis:folder"/>
+                        <f:selectItem itemLabel="Document" itemValue="cmis:document"/>
+                    </p:selectOneRadio>
+                    <br/>
+
+                    <p:inputText id="findName" value="#{treeBean.findName}"/>
+                    <p:watermark value="findName" for="findName"/>
+                    <br/>
+
+                    <!--metadata-->
+                    <p:inputText id="metaDataType" value="#{treeBean.metaDataType}" disabled="true"/>
+                    <p:watermark value="metaDataType" for="metaDataType"/>
+                    <br/>
+
+                    <!--format-->
+                    <p:inputText id="docType" value="#{treeBean.docType}" disabled="#{treeBean.disableSearchFolderProperties}"/>
+                    <p:watermark value="metaDataType" for="docType"/>
+                    <br/>
+
+                    <!--date-->
+                    <h:outputText value="From "/>
+                    <p:calendar id="calendarFrom" value="#{treeBean.calendarFrom}"/>
+                    <p:watermark value="First date" for="calendarFrom"/>
+                    <h:outputText value=" to "/>
+                    <p:calendar id="calendarTo" value="#{treeBean.calendarTo}"/>
+
+                    <p:watermark value="Second date" for="calendarTo"/>
+                    <br/>
+
+                    <!--Metadata-->
+                    <p:inputText id="contentType" value="#{treeBean.contentType}" disabled="true"/>
+                    <p:watermark value="findType" for="contentType"/>
+                    <br/>
+
+                    <!--size -->
+                    <h:outputText value="From "/>
+                    <p:inputText id="sizeFrom" value="#{treeBean.sizeFrom}" disabled="#{treeBean.disableSearchFolderProperties}"/>
+                    <p:watermark value="min size" for="sizeFrom"/>
+                    <h:outputText value=" to "/>
+                    <p:inputText id="sizeTo" value="#{treeBean.sizeTo}" disabled="#{treeBean.disableSearchFolderProperties}"/>
+                    <p:watermark value="max size" for="sizeTo"/>
+                    <br/>
+
+                    <p:inputText id="snippet" value="#{treeBean.snippet}" disabled="#{treeBean.disableSearchFolderProperties}"/>
+                    <p:watermark value="snippet for search" for="snippet"/>
+                    <br/>
+                    <p:commandButton value="Search3" actionListener="#{treeBean.findAdvanced}"
+                                     process=":#{cc.parent.clientId}:treeForm:table:tablecomponent"
+                                     update=":#{cc.parent.clientId}:treeForm:table:tablecomponent"/>
+                </p:tab>
+            </p:accordionPanel>
+
             <p:tabMenu id="actiontabmenu" activeIndex="6" rendered="#{cc.attrs.actionPanel}">
                 <p:menuitem>
                     <p:menuButton value="New">
