Exceptions + Search pre Demo

--- a/site/src/main/webapp/resources/composite/actionDialogs.xhtml
+++ b/site/src/main/webapp/resources/composite/actionDialogs.xhtml
@@ -90,7 +90,6 @@
 
     </p:dialog>
 
-
     <p:dialog id="#{cc.parent.id}edit" widgetVar="#{cc.attrs.edit}"
               header="Edit" modal="true"
               showEffect="fade"
@@ -107,7 +106,7 @@
 
             <p:fileUpload rendered="#{fileActions.selectedIsFile}" mode="simple" value="#{fileActions.file}"/>
             <br></br>
-            <p:commandButton id="downloadmenuitem" disabled="#{!fileActions.selectedIsFile}" value="Download"
+            <p:commandButton id="downloadButId" disabled="#{!fileActions.selectedIsFile}" value="Download"
                              ajax="false"
                              icon="ui-icon-triangle-1-s">
                 <p:fileDownload value="#{fileActions.download(treeBean.selectedFSObject)}"/>
@@ -115,7 +114,7 @@
             <br></br>
             <p:commandButton value="OK"
                              process="@form"
-                             actionListener="#{action.edit(treeBean.selectedFSObject)}"
+                             actionListener="#{action.edit(treeBean.selectedFSObject, treeBean.cachedNode)}"
                              ajax="false"
                              oncomplete="if (!args.validationFailed) #{cc.attrs.edit}.hide()"/>
 
