--- a/site/src/main/webapp/resources/composite/cmisBrowserComponent.xhtml
+++ b/site/src/main/webapp/resources/composite/cmisBrowserComponent.xhtml
@@ -40,7 +40,7 @@
             <ct:customFsTable id="table" actionPanel="#{cc.attrs.actionPanel}"
                               Name="#{cc.attrs.Name}"
                               TypeId="#{cc.attrs.TypeId}"
-                              ParentTypeId="true"
+                              ParentTypeId="#{cc.attrs.ParentTypeId}"
                               Id="#{cc.attrs.Id}"
                               Size="#{cc.attrs.Size}"
                               ContentType="#{cc.attrs.ContentType}"
