--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -43,7 +43,7 @@
                  selectionMode="single"
 
                  paginator="true" rows="10" lazy="true"
-                 paginatorTemplate="{CurrentPageReport} {RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
+                 paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
                  rowsPerPageTemplate="3,5,10,15"
                  onRowSelectUpdate="display"
                  currentPageReportTemplate="1"
@@ -54,7 +54,7 @@
         <p:ajax event="rowSelect" listener="#{treeBean.onRowSelect}"
                 update="@form :#{cc.parent.clientId}:actiondialogs:#{cc.parent.clientId}edit :historyDialogid :copyDialogId"/>
         <f:facet name="header">
-            <h:inputText value="#{treeBean.parent.path}"
+            <h:inputText value="#{treeBean.parent.path}" id="currentPath"
                          style="border-radius: 11px;font-size: 16px; margin-bottom: 5px; color: #000000;" size="90"
                          disabled="true"/>
 
