defined error, now all work

--- a/site/src/main/webapp/config.xhtml
+++ b/site/src/main/webapp/config.xhtml
@@ -42,7 +42,7 @@
                     <p:selectBooleanCheckbox id="lastModifiedDate" value="#{config.lastModifiedDate}" />
 
 
-                    <p:outputLabel value="Repo url" for="repUrl" />
+                    <uib:input id="repName" placeholder="Repo Name" value="#{config.repoName}"/>
                     <uib:input id="repUrl" placeholder="Repo url" value="#{config.repoURL}"/>
                     <p:commandButton type="submit" value="Ok" action="#{config.savePrefs}" ajax="false"/>
                 </h:panelGrid>
