--- a/site/src/main/webapp/config.xhtml
+++ b/site/src/main/webapp/config.xhtml
@@ -18,7 +18,7 @@
         </ui:define>
         <ui:define name="treeInfo">
             <h:form id="configForm">
-                <h:panelGrid id="panel" columns="2">
+                <h:panelGrid id="panel" columns="2" style="position: relative; top: 50%; left: 100%;">
                     <p:outputLabel value="Name column" for="name" />
                     <p:selectBooleanCheckbox id="name" value="#{config.name}" />
                     <p:outputLabel value="TypeId column" for="typeId" />
