--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -76,7 +76,7 @@
 
             </p:splitButton>
 
-            <p:accordionPanel id="accordion" activeIndex="-1" rendered="#{treeBean.ableSearchAdvanced}">
+            <p:outputPanel id="accordion"  rendered="#{treeBean.ableSearchAdvanced}">
                 <p:ajax event="tabChange" listener="#{treeBean.ableSearchAdvanced}"/>
                 <p:tab title="Advanced search">
 
@@ -134,7 +134,7 @@
                     </p:outputPanel>
 
                 </p:tab>
-            </p:accordionPanel>
+            </p:outputPanel>
 
             <p:tabMenu id="actiontabmenu" activeIndex="6" rendered="#{cc.attrs.actionPanel}">
                 <p:menuitem>
@@ -170,8 +170,9 @@
         </f:facet>
 
         <p:column style="width: 300px;" headerText="Name" rendered="#{cc.attrs.Name}">
-            <p:graphicImage value="/resources/images/#{fsObject.icon}" width="16" height="16"/>
+            <p:graphicImage id="dragIcon" value="/resources/images/#{fsObject.icon}" width="16" height="16"/>
             <h:outputText value="#{fsObject.name}"/>
+            <p:draggable for="dragIcon" revert="true" handle=""/>
         </p:column>
         <p:column style="width: 300px;" headerText="Type Id" rendered="#{cc.attrs.TypeId}">
             <h:outputText value="#{fsObject.typeId}"/>
