--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -76,7 +76,7 @@
 
             </p:splitButton>
 
-            <p:outputPanel id="accordion"  rendered="#{treeBean.ableSearchAdvanced}">
+            <p:accordionPanel id="accordion" activeIndex="-1" rendered="#{treeBean.ableSearchAdvanced}">
                 <p:ajax event="tabChange" listener="#{treeBean.ableSearchAdvanced}"/>
                 <p:tab title="Advanced search">
 
@@ -134,7 +134,7 @@
                     </p:outputPanel>
 
                 </p:tab>
-            </p:outputPanel>
+            </p:accordionPanel>
 
             <p:tabMenu id="actiontabmenu" activeIndex="6" rendered="#{cc.attrs.actionPanel}">
                 <p:menuitem>
