--- a/site/src/main/webapp/resources/composite/customFsTable.xhtml
+++ b/site/src/main/webapp/resources/composite/customFsTable.xhtml
@@ -76,60 +76,71 @@
             </p:splitButton>
 
             <p:accordionPanel id="accordion" activeIndex="-1" rendered="#{treeBean.ableSearchAdvanced}">
-                <p:ajax event="tabChange" listener="#{treeBean.ableSearchAdvanced}"/>
                 <p:tab title="Advanced search">
 
-
-                    <h:outputText value="Type: "/>
-                    <p:selectOneRadio id="options" value="#{treeBean.cmisType}">
-                        <p:ajax event="change" listener="#{treeBean.choosenCmisType}"
-                                update=":#{cc.parent.clientId}:treeForm:table:tablecomponent:accordion:properties"/>
-                        <f:selectItem itemLabel="Document" itemValue="cmis:document"/>
-                        <f:selectItem itemLabel="Folder" itemValue="cmis:folder"/>
-                    </p:selectOneRadio>
+                        <h:outputText value="Type: "/>
+                        <p:selectOneRadio id="options" value="#{treeBean.cmisType}">
+                            <p:ajax event="change" listener="#{treeBean.choosenCmisType}"
+                                    update=":#{cc.parent.clientId}:treeForm:table:tablecomponent:accordion:properties"/>
+                            <f:selectItem itemLabel="Document" itemValue="cmis:document"/>
+                            <f:selectItem itemLabel="Folder" itemValue="cmis:folder"/>
+                        </p:selectOneRadio>
                     <p:outputPanel id="properties">
 
                         <!--metadata-->
+                        <h:outputText value="Metadata: "/>
                         <p:inputText id="metaDataType" value="#{treeBean.metaDataType}" disabled="true"/>
                         <p:watermark value="metaDataType" for="metaDataType"/>
-                        <br/>
+
 
                         <!--format-->
+                        <h:outputText value="Document type: "/>
                         <p:inputText id="docType" value="#{treeBean.docType}"
                                      disabled="#{treeBean.disableSearchFolderProperties}"/>
-                        <p:watermark value="metaDataType" for="docType"/>
-                        <br/>
+                        <p:watermark value="docType" for="docType"/>
+
 
                         <!--date-->
-                        <h:outputText value="From "/>
+                        <h:outputText value="Date: from "/>
                         <p:calendar id="calendarFrom" value="#{treeBean.calendarFrom}"/>
                         <p:watermark value="First date" for="calendarFrom"/>
                         <h:outputText value=" to "/>
                         <p:calendar id="calendarTo" value="#{treeBean.calendarTo}"/>
 
                         <p:watermark value="Second date" for="calendarTo"/>
-                        <br/>
+
 
                         <!--Metadata-->
+                        <h:outputText value="Content"/>
                         <p:inputText id="contentType" value="#{treeBean.contentType}" disabled="true"/>
-                        <p:watermark value="findType" for="contentType"/>
-                        <br/>
+                        <p:watermark value="type" for="contentType"/>
+
 
                         <!--size -->
-                        <h:outputText value="From "/>
+                        <p:panelGrid columns="5" >
+                        <h:outputText value="Size:  from "/>
                         <p:inputText id="sizeFrom" value="#{treeBean.sizeFrom}"
                                      disabled="#{treeBean.disableSearchFolderProperties}"/>
-                        <p:watermark value="min size" for="sizeFrom"/>
+
                         <h:outputText value=" to "/>
                         <p:inputText id="sizeTo" value="#{treeBean.sizeTo}"
                                      disabled="#{treeBean.disableSearchFolderProperties}"/>
-                        <p:watermark value="max size" for="sizeTo"/>
-                        <br/>
 
+                        <p:selectOneMenu value="#{treeBean.sizeMultiplier}">
+                            <f:selectItem itemLabel="Kb" itemValue="1024" />
+                            <f:selectItem itemLabel="Mb" itemValue="1048576" />
+                            <f:selectItem itemLabel="Gb" itemValue="1073741824" />
+                        </p:selectOneMenu>
+                        </p:panelGrid>
+                        <p:watermark value="min size" for="sizeFrom"/>
+                        <p:watermark value="max size" for="sizeTo"/>
+
+
+                        <h:outputText value="Snippet: "/>
                         <p:inputText id="snippet" value="#{treeBean.snippet}"
                                      disabled="#{treeBean.disableSearchFolderProperties}"/>
-                        <p:watermark value="snippet for search" for="snippet"/>
-                        <br/>
+                        <p:watermark value="text snippet for search" for="snippet"/>
+
                     </p:outputPanel>
 
                 </p:tab>
